# RadianceCascades

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
shaders/: canvas.fs  flame.fs  global_illumination.fs  jfa.fs  old_rc.fs  overlay.fs  overlay.vs  radiance_cascade.fs  radiance_cascade_sdf.fs  sdf.fs  shaders.list  surface.fs  surface.vs  to_uv_colorspace.fs
sources/: aliasing.h  app.cc  app.h  canvas.cc  canvas.h  constants.h  flame_generator.cc  flame_generator.h  main.cc  measurement_aggregator.h  measurement_manager.cc  measurement_manager.h  render_node.cc  render_target.cc  render_target.h  renderer.cc  renderer.h  scoped_observation.h  shader.h  shader_manager.cc  shader_manager.h  surface.cc  surface.h  texture.cc  texture.h  timed_scope.h  ui.cc  ui.h  utility.cc  utility.h
sources/glad/include/KHR/: khrplatform.h
sources/glad/include/glad/: glad.h
sources/glad/src/: glad.cc
sources/render_nodes/: cached_cascade_node.cc  cached_cascades_node.h  canvas_node.h  copy_node.cc  copy_node.h  fire_node.cc  fire_node.h  global_illumination_node.cc  global_illumination_node.h  jfa_node.cc  jfa_node.h  radiance_cascades_node.cc  radiance_cascades_node.h  render_node.h
